src/test/testFiles/invalid/semanticErrors/incorrectNumberOfIndicesFor1DArray.val
let arr1 = Array<number>(5);
arr1[0][0] = 1;